--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "3.6.4",
+    "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
     "chartist": "0.11.4",
+    "core-js": "3.6.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "google-maps": "4.2.3",
+    "mongoose": "^5.10.13",
     "vue": "2.6.11",
     "vue-clickaway": "2.2.2",
     "vue-github-buttons": "3.1.0",
     "vue-material": "1.0.0-beta-11",
     "vue-router": "3.1.6",
-    "vue-social-sharing": "2.4.7"
+    "vue-social-sharing": "2.4.7",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.2.3",
