login mechanism done

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "google-maps": "4.2.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.13",
     "vue": "2.6.11",
     "vue-clickaway": "2.2.2",
